# robots_moviles

./: CMakeLists.txt  README.md  package.xml
launch/: frontier_map1.launch  frontier_map2.launch  frontier_map3.launch  gmapping_demo.launch  kinect_gmapping.launch.xml  map1.launch  map2.launch  map3.launch  rrt_map1.launch  rrt_map2.launch  rrt_map3.launch  single.rviz  turtlebot_exploration.rviz
launch/includes/: move_base.launch.xml  move_baseSafe.launch  (+1 more)
maps/: frontiermap1.yaml  frontiermap2.pgm  frontiermap2.yaml  frontiermap3.pgm  frontiermap3.yaml  map1.pgm  map1_explore2_res0_2.pgm  map1_explore2_res0_2.yaml  map1_explore_res_0_3.pgm  map1_explore_res_0_3.yaml  map1_frontier.pgm  map1_frontier.yaml  map2.yaml  map2_explore_res_0_2_1.pgm  map2_explore_res_0_2_1.yaml  map3.yaml  map3_explore_res_0_3_3.pgm  map3_explore_res_0_3_3.yaml  mapa1.txt  mapa1_explore.pgm  mapa1_explore.yaml  mapa1_frontier_1.pgm  mapa1_frontier_1.yaml  mapa1_rrt_exploration.pgm  mapa1_rrt_exploration.yaml  mapa1_rrt_exploration_1.pgm  mapa1_rrt_exploration_1.yaml  mapa2_explore.pgm  mapa2_explore.yaml  mapa2_explore1.pgm  mapa2_explore1.yaml  mapa2_frontier.pgm  mapa2_frontier.yaml  mapa2_rrt_exploration.pgm  mapa2_rrt_exploration.yaml  mapa2_rrt_exploration_1.pgm  mapa2_rrt_exploration_1.yaml  mapa2_rrt_exploration_2.pgm  mapa2_rrt_exploration_2.yaml  mapa3_explore.pgm  (+9 more)
param/: costmap_common_params.yaml  costmap_exploration.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
scripts/: explore.py  measure_distance.py
