<?xml version="1.0"?>
<package format="1">
  <name>robots_moviles</name>
  <version>0.0.0</version>
  <description>The robots_moviles package</description>
  <maintainer email="elisabeth@todo.todo">elisabeth</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <export>


  </export>
</package>
